--- a/interfaces/iexecution.html
+++ b/interfaces/iexecution.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>IExecution | react-hooks - v1.0.0</title>
-	<meta name="description" content="Documentation for react-hooks - v1.0.0">
+	<title>IExecution | react-hooks - v2.0.0</title>
+	<meta name="description" content="Documentation for react-hooks - v2.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<script async src="../assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">react-hooks - v1.0.0</a>
+					<a href="../index.html" class="title">react-hooks - v2.0.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -52,7 +52,7 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../modules.html">react-hooks - v1.0.0</a>
+					<a href="../modules.html">react-hooks - v2.0.0</a>
 				</li>
 				<li>
 					<a href="iexecution.html">IExecution</a>
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">pending<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L6">createExecutor.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L6">createExecutor.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -122,7 +122,7 @@
 					<div class="tsd-signature tsd-kind-icon">promise<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L32">createExecutor.ts:32</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L32">createExecutor.ts:32</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -137,7 +137,7 @@
 					<div class="tsd-signature tsd-kind-icon">reason<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L27">createExecutor.ts:27</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L27">createExecutor.ts:27</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -152,7 +152,7 @@
 					<div class="tsd-signature tsd-kind-icon">rejected<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L16">createExecutor.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L16">createExecutor.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -167,7 +167,7 @@
 					<div class="tsd-signature tsd-kind-icon">resolved<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L11">createExecutor.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L11">createExecutor.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -182,7 +182,7 @@
 					<div class="tsd-signature tsd-kind-icon">result<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">undefined</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">T</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L22">createExecutor.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L22">createExecutor.ts:22</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -247,6 +247,9 @@
 						<a href="../modules.html#debounce" class="tsd-kind-icon">Debounce</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
+						<a href="../modules.html#exactrefcallback" class="tsd-kind-icon">Exact<wbr>Ref<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="../modules.html#executorcallback" class="tsd-kind-icon">Executor<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-variable">
@@ -265,13 +268,10 @@
 						<a href="../modules.html#createexecutorhook" class="tsd-kind-icon">create<wbr>Executor<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#creatememohook" class="tsd-kind-icon">create<wbr>Memo<wbr>Hook</a>
+						<a href="../modules.html#createsemanticmemohook" class="tsd-kind-icon">create<wbr>Semantic<wbr>Memo<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
 						<a href="../modules.html#useblocker" class="tsd-kind-icon">use<wbr>Blocker</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#usecallback" class="tsd-kind-icon">use<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#usedebounce" class="tsd-kind-icon">use<wbr>Debounce</a>
@@ -282,14 +282,23 @@
 					<li class=" tsd-kind-function tsd-has-type-parameter">
 						<a href="../modules.html#useexecutor" class="tsd-kind-icon">use<wbr>Executor</a>
 					</li>
+					<li class=" tsd-kind-function">
+						<a href="../modules.html#usemountsignal" class="tsd-kind-icon">use<wbr>Mount<wbr>Signal</a>
+					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#usememo" class="tsd-kind-icon">use<wbr>Memo</a>
+						<a href="../modules.html#userefcallback" class="tsd-kind-icon">use<wbr>Ref<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#userendereffect" class="tsd-kind-icon">use<wbr>Render<wbr>Effect</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#usererender" class="tsd-kind-icon">use<wbr>Rerender</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter">
+						<a href="../modules.html#usesemanticcallback" class="tsd-kind-icon">use<wbr>Semantic<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter">
+						<a href="../modules.html#usesemanticmemo" class="tsd-kind-icon">use<wbr>Semantic<wbr>Memo</a>
 					</li>
 				</ul>
 			</nav>
