--- a/interfaces/iexecutor.html
+++ b/interfaces/iexecutor.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>IExecutor | react-hooks - v1.0.0</title>
-	<meta name="description" content="Documentation for react-hooks - v1.0.0">
+	<title>IExecutor | react-hooks - v2.0.0</title>
+	<meta name="description" content="Documentation for react-hooks - v2.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<script async src="../assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">react-hooks - v1.0.0</a>
+					<a href="../index.html" class="title">react-hooks - v2.0.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -52,7 +52,7 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../modules.html">react-hooks - v1.0.0</a>
+					<a href="../modules.html">react-hooks - v2.0.0</a>
 				</li>
 				<li>
 					<a href="iexecutor.html">IExecutor</a>
@@ -124,7 +124,7 @@
 					<div class="tsd-signature tsd-kind-icon">disposed<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L40">createExecutor.ts:40</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L40">createExecutor.ts:40</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -140,7 +140,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from Readonly.pending</p>
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L6">createExecutor.ts:6</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L6">createExecutor.ts:6</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -156,7 +156,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from Readonly.promise</p>
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L32">createExecutor.ts:32</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L32">createExecutor.ts:32</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -172,7 +172,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from Readonly.reason</p>
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L27">createExecutor.ts:27</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L27">createExecutor.ts:27</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -188,7 +188,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from Readonly.rejected</p>
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L16">createExecutor.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L16">createExecutor.ts:16</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -204,7 +204,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from Readonly.resolved</p>
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L11">createExecutor.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L11">createExecutor.ts:11</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -220,7 +220,7 @@
 					<aside class="tsd-sources">
 						<p>Inherited from Readonly.result</p>
 						<ul>
-							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L22">createExecutor.ts:22</a></li>
+							<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L22">createExecutor.ts:22</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -243,7 +243,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L66">createExecutor.ts:66</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L66">createExecutor.ts:66</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -266,7 +266,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L60">createExecutor.ts:60</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L60">createExecutor.ts:60</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -288,7 +288,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L55">createExecutor.ts:55</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L55">createExecutor.ts:55</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -310,7 +310,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L50">createExecutor.ts:50</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L50">createExecutor.ts:50</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -341,7 +341,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L76">createExecutor.ts:76</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L76">createExecutor.ts:76</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -369,7 +369,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutor.ts#L71">createExecutor.ts:71</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutor.ts#L71">createExecutor.ts:71</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -463,6 +463,9 @@
 						<a href="../modules.html#debounce" class="tsd-kind-icon">Debounce</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
+						<a href="../modules.html#exactrefcallback" class="tsd-kind-icon">Exact<wbr>Ref<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="../modules.html#executorcallback" class="tsd-kind-icon">Executor<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-variable">
@@ -481,13 +484,10 @@
 						<a href="../modules.html#createexecutorhook" class="tsd-kind-icon">create<wbr>Executor<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#creatememohook" class="tsd-kind-icon">create<wbr>Memo<wbr>Hook</a>
+						<a href="../modules.html#createsemanticmemohook" class="tsd-kind-icon">create<wbr>Semantic<wbr>Memo<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
 						<a href="../modules.html#useblocker" class="tsd-kind-icon">use<wbr>Blocker</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#usecallback" class="tsd-kind-icon">use<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#usedebounce" class="tsd-kind-icon">use<wbr>Debounce</a>
@@ -498,14 +498,23 @@
 					<li class=" tsd-kind-function tsd-has-type-parameter">
 						<a href="../modules.html#useexecutor" class="tsd-kind-icon">use<wbr>Executor</a>
 					</li>
+					<li class=" tsd-kind-function">
+						<a href="../modules.html#usemountsignal" class="tsd-kind-icon">use<wbr>Mount<wbr>Signal</a>
+					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#usememo" class="tsd-kind-icon">use<wbr>Memo</a>
+						<a href="../modules.html#userefcallback" class="tsd-kind-icon">use<wbr>Ref<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#userendereffect" class="tsd-kind-icon">use<wbr>Render<wbr>Effect</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#usererender" class="tsd-kind-icon">use<wbr>Rerender</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter">
+						<a href="../modules.html#usesemanticcallback" class="tsd-kind-icon">use<wbr>Semantic<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter">
+						<a href="../modules.html#usesemanticmemo" class="tsd-kind-icon">use<wbr>Semantic<wbr>Memo</a>
 					</li>
 				</ul>
 			</nav>
