--- a/interfaces/iexecutorprovider.html
+++ b/interfaces/iexecutorprovider.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>IExecutorProvider | react-hooks - v1.0.0</title>
-	<meta name="description" content="Documentation for react-hooks - v1.0.0">
+	<title>IExecutorProvider | react-hooks - v2.0.0</title>
+	<meta name="description" content="Documentation for react-hooks - v2.0.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<script async src="../assets/js/search.js" id="search-script"></script>
@@ -23,7 +23,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">react-hooks - v1.0.0</a>
+					<a href="../index.html" class="title">react-hooks - v2.0.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -52,7 +52,7 @@
 		<div class="container">
 			<ul class="tsd-breadcrumb">
 				<li>
-					<a href="../modules.html">react-hooks - v1.0.0</a>
+					<a href="../modules.html">react-hooks - v2.0.0</a>
 				</li>
 				<li>
 					<a href="iexecutorprovider.html">IExecutorProvider</a>
@@ -104,7 +104,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutorCache.ts#L8">createExecutorCache.ts:8</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutorCache.ts#L8">createExecutorCache.ts:8</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -150,7 +150,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/1428b76/src/main/createExecutorCache.ts#L13">createExecutorCache.ts:13</a></li>
+									<li>Defined in <a href="https://github.com/smikhalevski/react-hooks/blob/ce7839b/src/main/createExecutorCache.ts#L13">createExecutorCache.ts:13</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -211,6 +211,9 @@
 						<a href="../modules.html#debounce" class="tsd-kind-icon">Debounce</a>
 					</li>
 					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
+						<a href="../modules.html#exactrefcallback" class="tsd-kind-icon">Exact<wbr>Ref<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-type-alias tsd-has-type-parameter">
 						<a href="../modules.html#executorcallback" class="tsd-kind-icon">Executor<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-variable">
@@ -229,13 +232,10 @@
 						<a href="../modules.html#createexecutorhook" class="tsd-kind-icon">create<wbr>Executor<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-function">
-						<a href="../modules.html#creatememohook" class="tsd-kind-icon">create<wbr>Memo<wbr>Hook</a>
+						<a href="../modules.html#createsemanticmemohook" class="tsd-kind-icon">create<wbr>Semantic<wbr>Memo<wbr>Hook</a>
 					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
 						<a href="../modules.html#useblocker" class="tsd-kind-icon">use<wbr>Blocker</a>
-					</li>
-					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#usecallback" class="tsd-kind-icon">use<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#usedebounce" class="tsd-kind-icon">use<wbr>Debounce</a>
@@ -246,14 +246,23 @@
 					<li class=" tsd-kind-function tsd-has-type-parameter">
 						<a href="../modules.html#useexecutor" class="tsd-kind-icon">use<wbr>Executor</a>
 					</li>
+					<li class=" tsd-kind-function">
+						<a href="../modules.html#usemountsignal" class="tsd-kind-icon">use<wbr>Mount<wbr>Signal</a>
+					</li>
 					<li class=" tsd-kind-function tsd-has-type-parameter">
-						<a href="../modules.html#usememo" class="tsd-kind-icon">use<wbr>Memo</a>
+						<a href="../modules.html#userefcallback" class="tsd-kind-icon">use<wbr>Ref<wbr>Callback</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#userendereffect" class="tsd-kind-icon">use<wbr>Render<wbr>Effect</a>
 					</li>
 					<li class=" tsd-kind-function">
 						<a href="../modules.html#usererender" class="tsd-kind-icon">use<wbr>Rerender</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter">
+						<a href="../modules.html#usesemanticcallback" class="tsd-kind-icon">use<wbr>Semantic<wbr>Callback</a>
+					</li>
+					<li class=" tsd-kind-function tsd-has-type-parameter">
+						<a href="../modules.html#usesemanticmemo" class="tsd-kind-icon">use<wbr>Semantic<wbr>Memo</a>
 					</li>
 				</ul>
 			</nav>
